# I.A-Sarah

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  PATCH_NOTES.md  README.md  config.json  docker-compose.yml  gestor_exetavel.py  guia_instalacao.txt  open_pycharm.py  open_vscode.py  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.mmd  conf.py  index.rst  tutorial.rst
installer/: build_installer.ps1  installer.iss
scripts/: build.py  build_exe.ps1  setup_data.ps1
src/: background.py  config_manager.py  controllers.py  db.py  exporters.py  gui.py  gui2.py  main.py  pdf_utils.py  telemetry.py  widgets.py
src/controllers/: __init__.py
src/ia_sarah/: __init__.py
src/ia_sarah/core/: cli.py  config.json  main.py  plugin_loader.py  telemetry.py
src/ia_sarah/core/adapters/repositories/: __init__.py  db.py
src/ia_sarah/core/adapters/services/: __init__.py  exporters.py  pdf_utils.py
src/ia_sarah/core/adapters/utils/: __init__.py  config_manager.py
src/ia_sarah/core/entities/: models.py
src/ia_sarah/core/interfaces/api/: server.py
src/ia_sarah/core/interfaces/views/: __init__.py  gui.py  gui_qt.py  theme.py  widgets_qt.py
src/ia_sarah/core/use_cases/controllers/: __init__.py
src/repositories/: db.py
src/services/: __init__.py  exporters.py
src/utils/: config_manager.py
src/views/: __init__.py  gui.py  widgets.py
tests/: test_api.py  test_config_manager.py  test_controllers.py  test_db.py  test_exporters.py  test_gui.py  test_gui_qt.py  test_pdf_utils.py  test_plugin_loader.py
web/: index.html  style.css
