[tool.poetry]
name = "gestor-alunos"
version = "0.1.0"
description = "Gestor de Alunos para Personal Trainer"
readme = "README.md"
license = "MIT"
authors = ["Unknown <unknown@example.com>"]
packages = [{ include = "*", from = "src" }]
include = ["src/config.json"]

[tool.poetry.dependencies]
python = "^3.11"
ttkbootstrap = "^1.13"
fpdf = "^1.7"
pillow = "^10"
openpyxl = "^3.1"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pyvirtualdisplay = "^3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"

[tool.poetry.scripts]
gestor-alunos = "main:criar_interface"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
