[tool.poetry]
name = "ia-sarah"
version = "0.1.0"
description = "Gestor de Alunos para Personal Trainer"
readme = "README.md"
license = "MIT"
authors = ["Unknown <unknown@example.com>"]
packages = [{ include = "ia_sarah", from = "src" }]
include = ["src/ia_sarah/core/config.json"]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.6"
fpdf = "^1.7"
pillow = "^10"
openpyxl = "^3.1"
fastapi = "^0.110"
uvicorn = "^0.29"
typer = "^0.12"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-xdist = "^3.5"
coverage = "^7.4"
pytest-cov = "^4.1"
httpx = "^0.27"
pytest-asyncio = "^0.23"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-xdist",
    "coverage",
    "pytest-cov",
    "httpx",
    "pytest-asyncio",
]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^5.13.2"
bandit = "^1.7.7"
mypy = "^1.8"
pre-commit = "^3.5"

[tool.poetry.scripts]
iasarah = "ia_sarah.core.main:main"
iasarah-api = "ia_sarah.core.interfaces.api.server:main"
iasarah-cli = "ia_sarah.core.cli:main"

[tool.poetry.plugins."ia_sarah.exporters"]
pdf = "ia_sarah.core.adapters.services.exporters:PDFExporter"
csv = "ia_sarah.core.adapters.services.exporters:CSVExporter"
xlsx = "ia_sarah.core.adapters.services.exporters:ExcelExporter"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
